# gitlab-security-dashboard

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss  package.json  styles.css  tailwind.config.js
.github/workflows/: publish.yml
public/: output.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250212145751_create_repo_table.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs  repo.rs
src/api/: mod.rs
src/api/gitlab/: mod.rs
src/api/gitlab/graphql/: blob_info.graphql  getvul.graphql  getvuls.graphql  group_vul_history.graphql  path_last_commit.graphql  projects.graphql  raw_text_blob.graphql  vul_count.graphql  vulcount.graphql  vulnerabilitie.graphql
src/atoms/: mod.rs  search.rs
src/components/: code.rs  detail.rs  home.rs  mod.rs  navbar.rs  projects.rs  reports.rs
src/container/: home.rs  mod.rs
src/context/: api_context.rs  detail_context.rs  mod.rs  pin_projects.rs  project_context.rs  project_list_context.rs
src/js/: charts.js  monaco_loader.js  monaco_loader_detail.js
src/molecules/: left_navbar.rs  mid_navbar.rs  mod.rs  report_table.rs  right_navbar.rs  top_sidebar.rs
src/styles/: tailwind.css
